<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="172dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/calcu_"
        android:onClick="onCalculator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculator"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="174dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo_list"
        android:onClick="onTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/todo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="176dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/currenc_y"
        android:onClick="onCurrency"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/currency"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="130dp"
        android:layout_height="178dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/tictacto_e"
        android:onClick="onTTT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ttt"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/calculator_"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:text="@string/to_do_list"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/tictactoe_"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>


